--- a/client/pom.xml
+++ b/client/pom.xml
@@ -3,15 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>push.platform</artifactId>
+        <artifactId>push-platform</artifactId>
         <groupId>com.lmx</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.lmx.pushplatform</groupId>
-    <artifactId>client</artifactId>
-
+    <groupId>com.lmx</groupId>
+    <artifactId>push-platform-client</artifactId>
 
     <dependencies>
         <dependency>
@@ -23,8 +22,8 @@
             <artifactId>netty-all</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.lmx.pushplatform</groupId>
-            <artifactId>proto</artifactId>
+            <groupId>com.lmx</groupId>
+            <artifactId>push-platform-proto</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
