--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.lmx</groupId>
-    <artifactId>push.platform</artifactId>
+    <artifactId>push-platform</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>client</module>
         <module>server</module>
         <module>proto</module>
+        <module>gateway</module>
     </modules>
 
     <properties>
