add ws proxy for h5

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>client</module>
         <module>server</module>
         <module>proto</module>
+        <module>webproxy</module>
     </modules>
 
     <properties>
