--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,11 @@
                 <artifactId>junit</artifactId>
                 <version>4.12</version>
             </dependency>
+            <dependency>
+                <groupId>com.turo</groupId>
+                <artifactId>pushy</artifactId>
+                <version>0.13.5</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
