--- a/server/pom.xml
+++ b/server/pom.xml
@@ -47,5 +47,10 @@
             <groupId>org.apache.zookeeper</groupId>
             <artifactId>zookeeper</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.turo</groupId>
+            <artifactId>pushy</artifactId>
+            <version>0.13.5</version>
+        </dependency>
     </dependencies>
 </project>
