--- a/admin/src/main/resources/application.properties
+++ b/admin/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #mysql datasource
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
@@ -19,6 +19,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #spring.redis.cluster.nodes=192.168.224.163:7000
 spring.redis.host=localhost
 spring.redis.port=6379
+spring.redis.password=
 spring.redis.pool.max-active=64
 spring.redis.pool.max-idle=4
 spring.redis.pool.max-wait=-1
