增加大盘展示

--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -76,5 +76,10 @@
             <version>2.9.9</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
